# HODL_watcher

./: .dockerignore  .env.example  .gitignore  .vercelignore  DEPLOYMENT_MODES.md  Dockerfile  Makefile  PROJECT_MAP.md  README.md  dev.sh  pyproject.toml  requirements.txt  setup.sh  vercel.json
.agents/: AGENTS.md
.agents/skills/fastapi-pandas-endpoint/: SKILL.md
.agents/skills/free-api-rate-limiter/: SKILL.md
.agents/skills/hodl-dev-runner/: SKILL.md
.agents/skills/honest-metrics-reporter/: SKILL.md
api/: __init__.py  app.py  routes.py  schemas.py  services.py
data_ingestion/: __init__.py  binance_futures.py  binance_spot.py  bybit.py  cache_utils.py  coinalyze.py  coingecko.py  coinglass.py  config.py  deribit.py  dxy.py  etf_flows.py  fear_greed.py  fred_macro.py  hyperliquid.py  kraken.py  mempool_onchain.py  news_coindesk.py  news_cryptopanic.py  news_currents.py  news_gnews.py  news_newsapi.py  okx.py  onchain_metrics.py
docs/: API_AGENT_EN.md  API_AGENT_ES.md
execution/: README.md
features/: __init__.py  builder.py  indicators.py
frontend/: .env.example  .env.production  index.html  package-lock.json  package.json  vercel.json  vite.config.js
frontend/src/: App.css  App.jsx  index.css  main.jsx  utils.jsx
frontend/src/components/: AddWidgetMenu.jsx  (+26 more)
model/: __init__.py  agent_exporter.py  backtest.py  inference.py  labeling.py  validation.py  validation_metrics.py  validation_trading.py
scripts/: smoke_test.py
tests/: test_agent_exporter.py  test_api.py  test_data_ingestion.py  test_features.py  test_inference.py  test_validation.py
(+23 files in other folders)
