[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hodl-watcher"
version = "0.1.0"
description = "BTC/USDT quantitative analysis with Random Forest walk-forward validation"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "requests>=2.31",
    "fastapi>=0.100",
    "uvicorn>=0.23",
    "python-dotenv>=1.0",
    "newsapi-python>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "httpx>=0.24",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.setuptools.packages.find]
include = ["data_ingestion*", "features*", "model*", "api*"]

